--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +118,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"img/bookcover4.PNG\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"img/bookcover.PNG\">"
    ]
   },
@@ -126,31 +133,6 @@
    "metadata": {},
    "source": [
     "<div class=\"arabic\"><center>بسم الله الرحمن الرحيم</center></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"img/python.png\" style=\"width:200px;  margin:0px; transform:rotate(180deg)\" align=\"right\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr align=\"right\" width=\"300px\">\n",
-    "<div class=arabic >\n",
-    "    <h1 class=title align=\"center\" style=\"font-size:70px\" margin=\"0px\" padding=\"0px\">قرة العيون في تبسيط لغة بايثون</h1>\n",
-    "</div>\n",
-    "<hr align=\"left\" width=\"300px\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"img/python.png\" style=\"width:200px;  margin:0px; transform:rotate(180deg)\" align=\"left\">"
    ]
   },
   {
@@ -182,63 +164,63 @@
     "<strong>\n",
     "الفصل الاول:\n",
     "</strong>\n",
-    "<a href=\"#chapter1\">\n",
+    "<a href=\"الفصل%20الاول-%20نبذة%20عن%20بايثون.ipynb\">\n",
     "نبذة عن لغة بايثون\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل الثاني:\n",
     "</strong>\n",
-    "<a href=\"#chapter2\">\n",
+    "<a href=\"الفصل%20الثاني-المبادئ%20الاساسية%20للغة%20بايثون.ipynb\">\n",
     "المبادئ الاساسية للغة بايثون\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل الثالث:\n",
     "</strong>\n",
-    "<a href=\"#chapter3\">\n",
+    "<a href=\"الفصل%20الثالث-التعامل%20مع%20البيانات%20التجميعية.ipynb\">\n",
     "التعامل مع البيانات التجميعية\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل الرابع:\n",
     "</strong>\n",
-    "<a href=\"#chapter4\">\n",
+    "<a href=\"الفصل%20الرابع-اتخاذ%20القرارات.ipynb\">\n",
     "اتخاذ القرارات\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل الخامس:\n",
     "</strong>\n",
-    "<a href=\"#chapter5\">\n",
+    "<a href=\"الفصل%20الخامس-حلقات%20التكرار.ipynb\">\n",
     "حلقات التكرار\n",
     "</a>\n",
     "<br>\n",
     " <strong>\n",
     "الفصل السادس:\n",
     "</strong>\n",
-    "<a href=\"#chapter6\">\n",
+    "<a href=\"الفصل%20السادس-كتابة%20الدوال.ipynb\">\n",
     "كتابة الدوال\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل السابع:\n",
     "</strong>\n",
-    "<a href=\"#chapter7\">\n",
+    "<a href=\"الفصل%20السابع-التعامل%20مع%20الملفات.ipynb\">\n",
     "التعامل مع الملفات\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل الثامن:\n",
     "</strong>\n",
-    "<a href=\"#chapter8\">\n",
+    "<a href=\"الفصل%20الثامن-التعامل%20مع%20المكتبات.ipynb\">\n",
     "التعامل مع المكتبات\n",
     "</a>\n",
     "<br>\n",
     "<strong>\n",
     "الفصل التاسع:\n",
     "</strong>\n",
-    "<a href=\"#chapter9\">\n",
+    "<a href=\"الفصل%20التاسع-البرمجة%20الكائنية%20في%20بايثون.ipynb\">\n",
     "البرمجة الكائنية في بايثون\n",
     "</a>\n",
     "<br>\n",
