--- a/الفصل الثالث-التعامل مع البيانات التجميعية.ipynb
+++ b/الفصل الثالث-التعامل مع البيانات التجميعية.ipynb
@@ -2,23 +2,107 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d784335",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,amiri-quran,basim-marah,b-compset');\n",
+       "\n",
+       "\n",
+       ".title{\n",
+       "direction: rtl;\n",
+       "font-size:100px;\n",
+       "padding-right: 15px;\n",
+       "line-height:10px;\n",
+       "font-family:basim-marah;\n",
+       "\n",
+       "}\n",
+       "\n",
+       ".arabic{\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".horizontal{\n",
+       "height:2px;\n",
+       "border:none;\n",
+       "color:#333;\n",
+       "background-color:#333;\n",
+       "width:75%;\n",
+       "}\n",
+       ".jupyter-widgets{\n",
+       "    font-size:20px;\n",
+       "    direction:rtl;\n",
+       "    margin-right:25px;\n",
+       "    font-family:amiri-quran;\n",
+       "        \n",
+       "}\n",
+       ".widget-radio-box input{\n",
+       "    float:right;\n",
+       "    direction:ltr;\n",
+       "    margin: 0 calc( var(--jp-widgets-input-padding) * 2 ) 0 10px;\n",
+       "    text-align:right;\n",
+       "    height: 30px;\n",
+       "}\n",
+       ".widget-radio{\n",
+       "    flex-direction: column;\n",
+       "    width:unset;\n",
+       "    \n",
+       "}\n",
+       ".widget-label{  \n",
+       "    font-family:amiri-quran;\n",
+       "    font-size:18px;\n",
+       "    height: 40px;\n",
+       "}\n",
+       "\n",
+       ".widget-radio-box label {\n",
+       "    font-size:18px;\n",
+       "    height: 30px;\n",
+       "}\n",
+       "\n",
+       ".true-grade{\n",
+       "    color:green;\n",
+       "}\n",
+       ".false-grade{\n",
+       "    color:red;\n",
+       "}\n",
+       "label:lang(en){\n",
+       "    direction:ltr;\n",
+       "    text-align:right;\n",
+       "}\n",
+       ".s{\n",
+       "    line-height:unset;\n",
+       "    height:unset;\n",
+       "}\n",
+       ".CodeMirror-wrap {\n",
+       "    font-size:16px;\n",
+       "}\n",
+       "\n",
+       ".basic_table{\n",
+       "    font-size:20px;\n",
+       "    color:\"green\";\n",
+       "}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from IPython.core.display import HTML\n",
-    "\n",
-    "def _set_css_style(css_file_path):\n",
-    "   \"\"\"\n",
-    "   Read the custom CSS file and load it into Jupyter.\n",
-    "   Pass the file path to the CSS file.\n",
-    "   \"\"\"\n",
-    "\n",
-    "   styles = open(css_file_path, \"r\").read()\n",
-    "   s = '<style type=\"text/css\">%s</style>' % styles     \n",
-    "   return HTML(s)\n",
-    "_set_css_style(\"custom.css\")"
+    "import style\n",
+    "style._set_css_style(\"custom.css\")"
    ]
   },
   {
