--- a/دليل استخدام دفتر ملاحظات جوبتر.ipynb
+++ b/دليل استخدام دفتر ملاحظات جوبتر.ipynb
@@ -101,18 +101,8 @@
     }
    ],
    "source": [
-    "from IPython.core.display import HTML\n",
-    "\n",
-    "def _set_css_style(css_file_path):\n",
-    "   \"\"\"\n",
-    "   Read the custom CSS file and load it into Jupyter.\n",
-    "   Pass the file path to the CSS file.\n",
-    "   \"\"\"\n",
-    "\n",
-    "   styles = open(css_file_path, \"r\").read()\n",
-    "   s = '<style type=\"text/css\">%s</style>' % styles     \n",
-    "   return HTML(s)\n",
-    "_set_css_style(\"custom.css\")"
+    "import style\n",
+    "style._set_css_style(\"custom.css\")"
    ]
   },
   {
@@ -2528,7 +2518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
