--- a/الفصل الثاني-المبادئ الاساسية للغة بايثون.ipynb
+++ b/الفصل الثاني-المبادئ الاساسية للغة بايثون.ipynb
@@ -101,18 +101,8 @@
     }
    ],
    "source": [
-    "from IPython.core.display import HTML\n",
-    "\n",
-    "def _set_css_style(css_file_path):\n",
-    "   \"\"\"\n",
-    "   Read the custom CSS file and load it into Jupyter.\n",
-    "   Pass the file path to the CSS file.\n",
-    "   \"\"\"\n",
-    "\n",
-    "   styles = open(css_file_path, \"r\").read()\n",
-    "   s = '<style type=\"text/css\">%s</style>' % styles     \n",
-    "   return HTML(s)\n",
-    "_set_css_style(\"custom.css\")"
+    "import style\n",
+    "style._set_css_style(\"custom.css\")"
    ]
   },
   {
