--- a/الفصل الاول- نبذة عن بايثون.ipynb
+++ b/الفصل الاول- نبذة عن بايثون.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8bec8226",
    "metadata": {},
    "outputs": [
@@ -12,13 +12,70 @@
        "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,amiri-quran,basim-marah,b-compset');\n",
        "\n",
        "\n",
+       "@font-face {\n",
+       "  font-family: Arslan;\n",
+       "  src: url(Arslan.ttf);\n",
+       "}\n",
+       "\n",
        ".title{\n",
        "direction: rtl;\n",
        "font-size:100px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
        "font-family:basim-marah;\n",
+       "}\n",
        "\n",
+       "div.text_cell pre.CodeMirror-line {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       ".rendered_html {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html p {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h1{\n",
+       "direction: rtl;\n",
+       "font-size:200%;\n",
+       "padding-right: 15px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h2{\n",
+       "direction: rtl;\n",
+       "font-size:171%;\n",
+       "padding-right: 15px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h3{\n",
+       "direction: rtl;\n",
+       "font-size:141%;\n",
+       "padding-right: 15px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
        "}\n",
        "\n",
        ".arabic{\n",
@@ -95,7 +152,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
