improve how to read the book

--- a/الفصل الاول- نبذة عن بايثون.ipynb
+++ b/الفصل الاول- نبذة عن بايثون.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8bec8226",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,7 @@
        "div.text_cell pre.CodeMirror-line {\n",
        "direction:rtl;\n",
        "font-size:20px;\n",
+       "color:Blue;\n",
        "line-height:40px;\n",
        "padding-right: 1cm;\n",
        "padding-left: 1cm;\n",
@@ -57,15 +58,15 @@
        ".rendered_html h1{\n",
        "direction: rtl;\n",
        "font-size:200%;\n",
-       "padding-right: 15px;\n",
-       "line-height:10px;\n",
+       "text-align:center;\n",
+       "padding-right: 55px;\n",
        "font-family:Arslan;\n",
        "}\n",
        "\n",
        ".rendered_html h2{\n",
        "direction: rtl;\n",
        "font-size:171%;\n",
-       "padding-right: 15px;\n",
+       "padding-right: 55px;\n",
        "line-height:10px;\n",
        "font-family:Arslan;\n",
        "}\n",
@@ -73,9 +74,19 @@
        ".rendered_html h3{\n",
        "direction: rtl;\n",
        "font-size:141%;\n",
-       "padding-right: 15px;\n",
+       "padding-right: 55px;\n",
        "line-height:10px;\n",
        "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul {\n",
+       "    list-style-type: none;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul li:before {\n",
+       "  content: '-';\n",
+       "  position: absolute;\n",
+       "  margin-right: -10px;\n",
        "}\n",
        "\n",
        ".arabic{\n",
@@ -152,7 +163,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,67 +192,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3748cb7",
+   "id": "68d7128d",
    "metadata": {},
    "source": [
-    "<div class=arabic>    \n",
-    "<h2 class=title>\n",
-    "تعريف لغة بايثون\n",
-    "</h2>\n",
-    "بايثون  (python) لغة برمجية مفتوحة المصدر (open source) من المستوى العالي  (high level) سهلة التعلم يمكن الاعتماد عليها في كتابة الكثير من التطبيقات البرمجية القوية. وأكبر دليل على ذلك هو استخدام وكالة الارصاد الامريكية ناسا وشركتا قوقل وياهو وغيرها من الشركات الكبرى لهذه اللغة في بناء برامجهم المختلفة. \n",
-    "</div>"
+    "## تعريف لغة بايثون\n",
+    "بايثون  (python) لغة برمجية مفتوحة المصدر (open source) من المستوى العالي  (high level) سهلة التعلم يمكن الاعتماد عليها في كتابة الكثير من التطبيقات البرمجية القوية. وأكبر دليل على ذلك هو استخدام وكالة الارصاد الامريكية ناسا وشركتا قوقل وياهو وغيرها من الشركات الكبرى لهذه اللغة في بناء برامجهم المختلفة. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f4a1e2f7",
+   "id": "fe8cedd3",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<h2 class=title>\n",
-    "نشأة لغة بايثون\n",
-    "</h2>\n",
+    "## نشأة لغة بايثون\n",
     "كانت بدايات نشأة هذه اللغة في هولندا على يد شخص يدعي جويدو فان روزم\n",
-    " (Guido van Rossum) في نهاية الثمانيات الميلادية من القرن العشرين. حيث تم الاعلان عنها في عام ١٩٩١م. كما يعتبر فتح مصدر هذه اللغة من اهم الاسباب التي ادت الى زيادة شهرتها من خلال تكوين مجتمع برمجي نشط حولها اسهم في  انشاء مكتبات كثيرة سهلت على المطورين الاخرين بناء تطبيقاتهم بسرعة و سهوله فائقة مقارنة باللغات البرمجية الأخرى. \n",
-    "</div>"
+    " (Guido van Rossum) في نهاية الثمانيات الميلادية من القرن العشرين. حيث تم الاعلان عنها في عام ١٩٩١م. كما يعتبر فتح مصدر هذه اللغة من اهم الاسباب التي ادت الى زيادة شهرتها من خلال تكوين مجتمع برمجي نشط حولها اسهم في  انشاء مكتبات كثيرة سهلت على المطورين الاخرين بناء تطبيقاتهم بسرعة و سهوله فائقة مقارنة باللغات البرمجية الأخرى. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "001e3964",
+   "id": "c050055c",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<h2 class=title>\n",
     "مزايا لغة بايثون\n",
-    "</h2>\n",
     "للغة بايثون مزايا عدة جعلت منها اللغة المفضلة الاولى لدى كثير من المبرمجين ومن بين اهم هذه المزايا نذكر:\n",
-    "<br>\n",
-    "<ol>\n",
-    "<li>\n",
-    "سهولة التراكيب اللغوية: فاكوادها البرمجية تكتب بطريقة قريبة جدا من اللغة الانجليزية. لذلك نجدها لا تشكل اي عائق امام أي مبرمج ان يفهم الأكواد المكتوبة من قبل مبرمجين اخرين عندما يستدعي الامر صيانة تلك الاكواد او تحديثها.\n",
-    "<li>\n",
-    "المرونة: يمكن تشغيل وتطوير البرامج المكتوبة بلغة بايثون على معظم انظمة التشغيل المعروفة. فالأكواد التي تم تطويرها على نظام ويندوز يمكن تشغيلها على نظام ماك ولينكس والعكس صحيح دون الحاجة الى اعادة بناء الأكواد (compiling).\n",
-    "<li>\n",
-    "كثرة المكتبات: يعتبر توفر المكتبات من اهم المزايا التي تقدمها اللغة للمبرمجين لتزيد من فعاليتهم في بناء التطبيقات. لذلك عند تنصيب اصدارة بايثون نجد انها تحتوي على مكتبات قياسية كثيرة بعضها يعتبر جزء لا يتجزأ من تراكيب اللغة كمكتبة الارقام والقوائم وبعضها الاخر يعمل على تسهيل التعامل مع انظمة التشغيل اما الجزء الاكبر من هذه المكتبات فهو اختياري يتم استيراده متى ما دعت الحاجة لذلك. كما ان هناك مكتبات اخري تحتاج الى تنصيب قبل ان يتمكن المبرمج من استيرادها واستخدامها في برنامجه. وهذه المكتبات مجانية ويمكن تحميلها وتنصيبها اما من الموقع الخاص بالمطورين لهذه المكتبة او من موقع  <a href=\"http://pypi.python.org \"> http://pypi.python.org </a>\n",
+    "1. **سهولة التراكيب اللغوية**: فاكوادها البرمجية تكتب بطريقة قريبة جدا من اللغة الانجليزية. لذلك نجدها لا تشكل اي عائق امام أي مبرمج ان يفهم الأكواد المكتوبة من قبل مبرمجين اخرين عندما يستدعي الامر صيانة تلك الاكواد او تحديثها.\n",
+    "2. **المرونة**: يمكن تشغيل وتطوير البرامج المكتوبة بلغة بايثون على معظم انظمة التشغيل المعروفة. فالأكواد التي تم تطويرها على نظام ويندوز يمكن تشغيلها على نظام ماك ولينكس والعكس صحيح دون الحاجة الى اعادة بناء الأكواد (compiling).\n",
+    "3. **كثرة المكتبات**: يعتبر توفر المكتبات من اهم المزايا التي تقدمها اللغة للمبرمجين لتزيد من فعاليتهم في بناء التطبيقات. لذلك عند تنصيب اصدارة بايثون نجد انها تحتوي على مكتبات قياسية كثيرة بعضها يعتبر جزء لا يتجزأ من تراكيب اللغة كمكتبة الارقام والقوائم وبعضها الاخر يعمل على تسهيل التعامل مع انظمة التشغيل اما الجزء الاكبر من هذه المكتبات فهو اختياري يتم استيراده متى ما دعت الحاجة لذلك. كما ان هناك مكتبات اخري تحتاج الى تنصيب قبل ان يتمكن المبرمج من استيرادها واستخدامها في برنامجه. وهذه المكتبات مجانية ويمكن تحميلها وتنصيبها اما من الموقع الخاص بالمطورين لهذه المكتبة او من موقع  <a href=\"http://pypi.python.org \"> http://pypi.python.org </a>\n",
     " والذي يحتوي حتى وقت كتابة هذا الكتاب على 69478 مكتبة مجانية جاهزة يمكن استخدامها في بناء التطبيقات المختلقة.\n",
-    "<li>\n",
-    "التكامل مع لغات برمجية اخرى: يمكن استخدام بايثون كلغة مساندة تمكن المستخدم لبرنامج مكتوب بلغة سي (C) او سي بلس بلس (++C) مثلا من زيادة او تعديل خصائص ذلك البرنامج ليتناسب مع احتياج المستخدم. ومن أقرب الامثلة على ذلك هو استخدام لغة بايثون في برنامج فري كاد (FreeCAD) كلغة برمجة نصية للتحكم بكافة خصائص البرنامج ووظائفه.\n",
-    "</ol>\n",
-    "</div>"
+    "4. **التكامل مع لغات برمجية اخرى**: يمكن استخدام بايثون كلغة مساندة تمكن المستخدم لبرنامج مكتوب بلغة سي (C) او سي بلس بلس (++C) مثلا من زيادة او تعديل خصائص ذلك البرنامج ليتناسب مع احتياج المستخدم. ومن أقرب الامثلة على ذلك هو استخدام لغة بايثون في برنامج فري كاد (FreeCAD) كلغة برمجة نصية للتحكم بكافة خصائص البرنامج ووظائفه."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d4a6337",
+   "id": "c987722d",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<h2 class=title>\n",
-    "اصدارات لغة بايثون\n",
-    "</h2>\n",
-    "هناك اصدارتان لبايثون. الإصدارة الأولى تعرف ببايثون 2 وهي الاقدم والاصدارة الاخرى تدعى بايثون 3 وهي الاحدث.\n",
-    "</div>"
+    "## اصدارات لغة بايثون\n",
+    "هناك اصدارتان لبايثون. الإصدارة الأولى تعرف ببايثون 2 وهي الاقدم والاصدارة الاخرى تدعى بايثون 3 وهي الاحدث."
    ]
   },
   {
@@ -275,32 +263,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393293ee",
+   "id": "92251d6a",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "<h2 class=title>\n",
-    "تنصيب بايثون\n",
-    "</h2>\n",
-    "بما ان ميكروسوفت ويندوز مازال اكثر انطمة التشغيل شيوعا وخاصة في الوطن العربي فاننا سنبدأ بشرح طريقة تنصيب مفسر لغة بايثون على هذا النظام اولا.\n",
-    "\n",
-    "\n",
-    "<h3 class=title>\n",
-    "تنصيب بايثون على نظام ويندوز:\n",
-    "</h3>\n",
-    "كما ذكرنا سابقا فان بايثون ياتي بتوزيعة رسمية من موقع  <a href=\"http://www.python.org\">www.python.org</a> وتوزيعات اخرى تحتوي على بعض الاضافات مثل  Anaconda و Canopy وغيرها من التوزيعات وفي هذا المقام فإننا سوف نقوم بشرح طريقة تنصيب مفسر بايثون 3 من الموقع الرسمي وكذلك توزيعة anaconda لشهرتها الواسعة بين العلماء والباحثين. واليك الخطوات التالية التي تساعدك على عمل ذلك   \n",
-    "</div>"
+    "## تنصيب بايثون\n",
+    "بما ان ميكروسوفت ويندوز مازال أكثر أنطمة التشغيل شيوعاً وخاصة في الوطن العربي فإننا سنبدأ بشرح طريقة تنصيب مفسر لغة بايثون على هذا النظام اولا.ً\n",
+    "### تنصيب بايثون على نظام ويندوز:\n",
+    "كما ذكرنا سابقا فان بايثون ياتي بتوزيعة رسمية من موقع  <a href=\"http://www.python.org\">www.python.org</a> وتوزيعات أخرى تحتوي على بعض الاضافات مثل  Anaconda و Canopy وغيرها من التوزيعات وفي هذا المقام فإننا سوف نقوم بشرح طريقة تنصيب مفسر بايثون 3 من الموقع الرسمي وكذلك توزيعة anaconda لشهرتها الواسعة بين العلماء والباحثين. واليك الخطوات التالية التي تساعدك على عمل ذلك   "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45ae93c0",
+   "id": "67ef0c1e",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "  <h4 class=title>\n",
-    "أولاً: تصيب اصدارة بايثون الرئيسية</h4>  \n",
-    "</div>"
+    "**تصيب اصدارة بايثون الرئيسية على نظام ويندوز**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a76d4bf",
+   "metadata": {},
+   "source": [
+    "شاهد مقطع الفيديو التالي:"
    ]
   },
   {
@@ -339,12 +324,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a8e4ae9",
+   "id": "857e1e46",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "  <h4 class=title>ثانياً: تصيب توزيعة Anaconda</h4>  \n",
-    "</div>"
+    "**تنصيب توزيعة Anaconda على نظام ويندوز**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4cd9e19",
+   "metadata": {},
+   "source": [
+    "شاهد مقطع الفيديو التالي:"
    ]
   },
   {
@@ -383,25 +374,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f272295e",
+   "id": "63bb4c5d",
    "metadata": {},
    "source": [
-    "<div class=arabic> \n",
-    "<h3 class=title>\n",
-    "تنصيب بايثون على نظام ماك ولينكس:\n",
-    "</h3>\n",
-    "يأتي نظاما تشغيل ماك ولينكس وقد نصب عليهما مفسر بايثون ذو الاصدرة رقم 2. لكن هذه الاصدارة اصحبت قديمة ولا نريد ان نستخدمها في تعلمنا للغة بايثون هنا لذلك سوف نقوم بشرح طريقة تنصيب اصدارة بايثون 3 الأساسية و توزيعة Aanconda  على نظام الماك ولينكس كما يلي: \n",
-    "</div>"
+    "### تنصيب بايثون على نظام ماك ولينكس:\n",
+    "يأتي نظاما تشغيل ماك ولينكس وقد نصب عليهما مفسر بايثون ذو الإصدرة رقم 2. لكن هذه الإصدارة أصحبت قديمة ولا نريد أن نستخدمها في تعلمنا للغة بايثون هنا لذلك سوف نقوم بشرح طريقة تنصيب إصدارة بايثون 3 الأساسية و توزيعة Aanconda  على نظام الماك ولينكس كما يلي: "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16952d28",
+   "id": "2089a599",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "  <h4 class=title>اولاً: تصيب اصدارة بايثون الرئيسية على نظام ماك</h4>  \n",
-    "</div>"
+    "**تصيب إصدارة بايثون الرئيسية على نظام ماك**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "004d7dd5",
+   "metadata": {},
+   "source": [
+    "شاهد مقطع الفيديو التالي:"
    ]
   },
   {
@@ -440,17 +433,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12faf32e",
+   "id": "4d32f310",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "  <h4 class=title>ثانياً: تصيب توزيعة Anaconda على نظام ماك</h4>  \n",
-    "</div>"
+    "**تصيب توزيعة Anaconda على نظام ماك**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bd13f07",
+   "metadata": {},
+   "source": [
+    "شاهد مقطع الفيديو التالي:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ab1804cd",
    "metadata": {},
    "outputs": [
@@ -468,10 +467,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f6d04338f10>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fe6d408f8e0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,19 +482,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539f619b",
+   "id": "f0e6896b",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "  <h4 class=title>ثالثاً: تصيب اصدارة بايثون الرئيسية على نظام لينكس</h4>  \n",
-    "</div>"
+    "**تصيب إصدارة بايثون الرئيسية على نظام لينكس** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0830e6f",
+   "metadata": {},
+   "source": [
+    "شاهد مقطع الفيديو التالي:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "id": "aeff2067",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -527,12 +534,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ade4fb",
+   "id": "d74fdcb8",
    "metadata": {},
    "source": [
-    "<div class=arabic>\n",
-    "  <h4 class=title>رابعاً: تصيب توزيعة Anaconda على نظام لينكس</h4>  \n",
-    "</div>"
+    "**تصيب توزيعة Anaconda على نظام لينكس**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bbf6349",
+   "metadata": {},
+   "source": [
+    "شاهد مقطع الفيديو التالي:"
    ]
   },
   {
