--- a/دليل استخدام دفتر ملاحظات جوبتر.ipynb
+++ b/دليل استخدام دفتر ملاحظات جوبتر.ipynb
@@ -12,13 +12,81 @@
        "<style type=\"text/css\">@import url('https://www.fontstatic.com/f=yassin,amiri-quran,basim-marah,b-compset');\n",
        "\n",
        "\n",
+       "@font-face {\n",
+       "  font-family: Arslan;\n",
+       "  src: url(Arslan.ttf);\n",
+       "}\n",
+       "\n",
        ".title{\n",
        "direction: rtl;\n",
        "font-size:100px;\n",
        "padding-right: 15px;\n",
        "line-height:10px;\n",
        "font-family:basim-marah;\n",
+       "}\n",
        "\n",
+       "div.text_cell pre.CodeMirror-line {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "color:Blue;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       ".rendered_html {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html p {\n",
+       "direction:rtl;\n",
+       "font-size:20px;\n",
+       "line-height:40px;\n",
+       "padding-right: 1cm;\n",
+       "padding-left: 1cm;\n",
+       "text-align:justify;\n",
+       "font-family:amiri-quran;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h1{\n",
+       "direction: rtl;\n",
+       "font-size:200%;\n",
+       "text-align:center;\n",
+       "padding-right: 55px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h2{\n",
+       "direction: rtl;\n",
+       "font-size:171%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html h3{\n",
+       "direction: rtl;\n",
+       "font-size:141%;\n",
+       "padding-right: 55px;\n",
+       "line-height:10px;\n",
+       "font-family:Arslan;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul {\n",
+       "    list-style-type: none;\n",
+       "}\n",
+       "\n",
+       ".rendered_html ul li:before {\n",
+       "  content: '-';\n",
+       "  position: absolute;\n",
+       "  margin-right: -10px;\n",
        "}\n",
        "\n",
        ".arabic{\n",
