modified how to read the book

--- a/كيف تقرأ الكتاب.ipynb
+++ b/كيف تقرأ الكتاب.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ff1802a9",
+   "execution_count": 4,
+   "id": "96d07da3",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,6 +174,15 @@
    "source": [
     "import style\n",
     "style._set_css_style(\"custom.css\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48127f80",
+   "metadata": {},
+   "source": [
+    "  \n",
+    "    "
    ]
   },
   {
@@ -189,7 +198,7 @@
    "id": "2efa9373",
    "metadata": {},
    "source": [
-    "تم تدوين هذا الكتاب بواسطة دفتر ملاحظات جوبتر. ووقع الاختيار على استخدام دفتر ملاحظات جوبتر لعدة اسباب من اهمها:"
+    "تم تدوين هذا الكتاب بواسطة دفتر ملاحظات جوبتر. ووقع الإختيار على استخدام دفتر ملاحظات جوبتر لعدة أسباب من أهمها:"
    ]
   },
   {
@@ -197,58 +206,19 @@
    "id": "a71fbbd1",
    "metadata": {},
    "source": [
-    "1.  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية اضافة الشروح وكتابة الاكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق نصوص Markdown تسمح بكتابة النصوص واضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ اكواد بايثون البرمجية داخالها.\n",
-    "2. تعلم لغات البرمجة يتطلب الكثير من التمرس على كتابة الاكواد واكتشاف الاخطاء ووجود بيئة تفاعلية مثل دفتر ملاحظات جوبتر سوف تمكين المتعلم من التعديل على الاكواد الموجودة داخل صفحات الكتاب واختبار نتائج التعديل عليها دون الحاجة الى اعادة كتابة الاكواد في محرر خارجي خاص كما جرت عليه العادة في كتب تعليم لغات البرمجة الورقية.  \n",
-    "3. امكانية اضافة المتعلم لملاحظاته الخاصة داخل الكتاب بشكل مباشر."
+    "1.  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق نصوص Markdown تسمح بكتابة النصوص وإضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخالها.\n",
+    "2. تعلم لغات البرمجة يتطلب الكثير من التمرس على كتابة الأكواد واكتشاف الأخطاء ووجود بيئة تفاعلية مثل دفتر ملاحظات جوبتر سوف يمكين المتعلم من التعديل على الأكواد الموجودة داخل صفحات الكتاب واختبار نتائج التعديل عليها دون الحاجة الى إعادة كتابة الأكواد في محرر خارجي خاص كما جرت عليه العادة في كتب تعليم لغات البرمجة الورقية.  \n",
+    "3. امكانية إضافة المتعلم لملاحظاته الخاصة داخل الكتاب بشكل مباشر."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b72c934e",
+   "id": "b62729de",
    "metadata": {},
    "source": [
-    "  لاستخدام دفتر ملاحظات جوبتر في فتح الكتاب والتفاعل معه هناك طريقتان:\n",
-    "  - فتح الكتاب عن طريق خادم مجاني تم تنصيب دفتر ملاحظات جوبتر عليه مثل موقع mybinder وموقع قوقل collab\n",
-    "  - فتح الكتاب عن طريق  دفتر ملاحظات جوبتر بعد تنصيبه على الجهاز الذي تعمل عليه."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a4b6133e",
-   "metadata": {},
-   "source": [
-    "## استخدام خادم mybinder"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a7beb2d",
-   "metadata": {},
-   "source": [
-    "1. قم بنسخ عنوان موقع الكتاب <a href=\"https://github.com/ahmadalsaadi/arabic-python-notebook.git\">https://github.com/ahmadalsaadi/arabic-python-notebook.git</a>\n",
-    "2. قم بزيارة موقع <a href=\"https://mybinder.org/\">mybinder.org</a>\n",
-    "3. قم بلصق عنوان موقع الكتاب في موقع mybinder والضغط على زر launch كما في الشكل التالي:\n",
-    "    <img src=\"img/mybinder2.png\">\n",
-    "4. انتظر ريثما يقوم خادم mybinder بتجهيز بيئة دفتر ملاحظات جوبتر وفتح المجلد الذي يجتوي على ملفات الكتاب.\n",
-    "5.  اضغط على ملف قرة العيون في تبسيط لغة بايثون لفتح الكتاب\n",
-    "6. لإظهار الكتاب بالشكل المطلوب قم بالضغط على أول خلية في الكتاب ومن ثم قم بالضغط زر run من شريط الأوامر في دفتر ملاحظات جوبتر.\n",
     "\n",
-    "    <img src=\"img/cmd4.png\">         "
+    "لاستخدام دفتر ملاحظات جوبتر في فتح الكتاب والتفاعل معه يجب عليك اولا تنصيبه على الجهاز الذي تعمل عليه. بعد إتمام عملية التنصيب بنجاح وتشغيل دفتر ملاحظات جوبتر سوف يتم إنشاء خادم محلي على جهاز الكمبيوتر يمكن الدخول اليه من خلال متصفح الويب  والذي بدوره يمكنا من فتح ملفات الكتاب. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "183ebc1c",
-   "metadata": {},
-   "source": [
-    "## استخدام خادم Collab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5cd7daef",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -256,7 +226,7 @@
    "metadata": {},
    "source": [
     "## تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر \n",
-    "تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى  من بين الطرق الثلاثة السابقة. وتعتبر طريقة تصيب توزيعة ِِAnaconda هي الطريقة الأسهل للمبتدئين متى ما ارادوا تنصيب دفتر ملاحظات جوبتر على اجهمزتهم الكمبيوترية.  فتوزيعة Anaconda تحتوي على مفسر بايثون ودفتر ملاحظات جوبتر والكثير من المكتبات العلمية المفيدة التي تصل بالمتعلم الى مستويات متقدمة في لغة بايثون. لذلك سوف نقتصر الشرح هنا على كيفية تنصيب هذه التوزيعة."
+    "تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى. وتعتبر طريقة تصيب توزيعة ِِAnaconda هي الطريقة الأسهل للمبتدئين متى ما أرادوا تنصيب دفتر ملاحظات جوبتر على أجهزتهم الكمبيوترية.  فتوزيعة Anaconda تحتوي على مفسر بايثون ودفتر ملاحظات جوبتر والكثير من المكتبات العلمية المفيدة التي تصل بالمتعلم الى مستويات متقدمة في لغة بايثون. لذلك سوف نقتصر الشرح هنا على كيفية تنصيب هذه التوزيعة."
    ]
   },
   {
@@ -272,25 +242,27 @@
    "id": "b3b91f5b",
    "metadata": {},
    "source": [
-    "يمكن اتباع الخطوات التالية لتنصيب توزيعة Anaconda على انظمة التشغيل الثلاثة المشهورة (وندوز ـ ماك ـ ولينكس)."
+    "يمكن اتباع الخطوات التالية لتنصيب توزيعة Anaconda على أنظمة التشغيل الثلاثة المشهورة (وندوز ـ ماك ـ ولينكس)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4ca0cbcd",
+   "id": "2e333931",
    "metadata": {},
    "source": [
-    "1.  قم بزيارة موقع Anaconda  التالي: https://www.anaconda.com/products/distribution\n",
-    "2. قم بتحميل التوزيعة المناسبة على جهازك.\n",
-    "3. قم بتشغيل الملف الذي قمت بتحميله في الخطوة 2 لبدء واكمال عملية التنصيب على جهازك.\n",
+    "1.  قم بزيارة موقع Anaconda  التالي:    \n",
+    "https://www.anaconda.com/products/distribution\n",
+    "2. قم بتحميل التوزيعة المناسبة لنظام التشغيل الذي تعمل عليه على جهازك.\n",
+    "3. قم بتشغيل الملف الذي قمت بتحميله في الخطوة 2 لبدء وإكمال عملية التنصيب على جهازك.\n",
     "4. بعد اكتمال عملية التنصيب قم بفتح Anaconda Navigator من خلال البحث في البرامج الموجودة على جهازك.\n",
     "5. بعد تشغيل Anaconda Navigator سوف تظهر لك نافذه تحتوي على عدة برامج اختر منها دفتر ملاحظات جوبتر Jupyter Notebook وقم بالضغط عليه.\n",
     "6. سوف يتم فتح دفتر ملاحظات جوبتر في متصفح الويب لديك ويعرض لك قائمة بالملفات والمجلدات الموجودة على جهازك.\n",
-    "7. قم بتحميل الكتاب من موقع  Github بالضغط على الرابط التالي: https://github.com/AhmadAlsaadi/Arabic-python-notebook/archive/refs/heads/master.zip\n",
-    "8. قم بفك الضغط عن مجلد الكتاب ووضعه على سطح المكتب او في اي مكان آخر تختاره.\n",
+    "7. قم بتحميل الكتاب من موقع  Github بالضغط على الرابط التالي:    \n",
+    "https://github.com/AhmadAlsaadi/Arabic-python-notebook/archive/refs/heads/master.zip\n",
+    "8. قم بفك الضغط عن مجلد الكتاب ووضعه على سطح المكتب أو في أي مكان آخر تختاره.\n",
     "9. عد لدفتر ملاحظات جوبتر وابحث في قائمة المجلدات هناك عن مجلد الكتاب الذي قمت بفك الضغط عنه واضغط عليه للدخول  للمجلد.\n",
     "10. عند الدخول لمجلد الكتاب من دفتر ملاحظات جوبتر قم بالضغط على الملف \"قرة العيون في تبسيط لغة بايثون\" لفتح الكتاب .\n",
-    "11. لاظهار الكتاب بالشكل الصحيح قم باختيار اول خلية في الكتاب والضغط على زر Run من قائمة الادوات في دفتر ملاحظات جوبتر كما هو موضح في الشكل التالي:\n",
+    "11. لإظهار الكتاب بالشكل الصحيح قم باختيار أول خلية في الكتاب والضغط على زر Run من قائمة الادوات في دفتر ملاحظات جوبتر كما هو موضح في الصورة أدناه:\n",
     "\n",
     "<img src=\"img/cmd4.png\">\n",
     "\n",
@@ -300,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30ef28d7",
+   "id": "d104f6f6",
    "metadata": {},
    "outputs": [],
    "source": []
